INCLUDES =			\
        @PACKAGE_CFLAGS@	\
	@IAL_DEFINES@	

lib_LTLIBRARIES=		\
    libial.la

	

#libialncludedir =		\
#   $(includedir)/libial

#libialinclude_HEADERS = 	\
#    libial.h

libial_la_SOURCES = 		\
    libial.c 			\
    libial.h			\
    libial_log.c		\
    libial_log.h		\
    libial_mod.h

